# tempest

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build-instructions.md  cargo-sources.json  com.vintagetechie.CosmicExtAppletTempest.json
.claude/: settings.local.json
.forgejo/workflows/: release.yml
.github/workflows/: release.yml  tag.yml
.planning/phases/01-pollen-integration/: PLAN.md
.planning/spikes/: CONVENTIONS.md  MANIFEST.md  WRAP-UP-SUMMARY.md
.planning/spikes/001-live-fetch-shape/: README.md  raw-berlin.json  raw-nyc.json  raw-paris.json  raw-rome.json  raw-tokyo.json
.planning/spikes/002-severity-scale/: README.md  categorize.rs
.planning/spikes/003-ui-placement/: README.md  mockup.html
.planning/spikes/004-coverage-edges/: README.md  raw-ankara.json  raw-cairo.json  raw-cyprus.json  raw-erzurum.json  raw-helsinki.json  raw-istanbul.json  raw-lisbon.json  raw-london.json  raw-moscow.json  raw-reykjavik.json  raw-telaviv.json  raw-yekaterinburg.json
docs/superpowers/plans/: 2026-05-14-cosmic-conformance-2-8-3.md
docs/superpowers/specs/: 2026-05-14-cosmic-conformance-2-8-3-design.md
i18n/cs/: cosmic_ext_applet_tempest.ftl
i18n/de/: cosmic_ext_applet_tempest.ftl
i18n/en/: cosmic_ext_applet_tempest.ftl
i18n/en-US/: cosmic_ext_applet_tempest.ftl
i18n/es-ES/: cosmic_ext_applet_tempest.ftl
i18n/fr/: cosmic_ext_applet_tempest.ftl
i18n/hu/: cosmic_ext_applet_tempest.ftl
i18n/pl/: cosmic_ext_applet_tempest.ftl
i18n/pt-BR/: cosmic_ext_applet_tempest.ftl
i18n/ru/: cosmic_ext_applet_tempest.ftl
i18n/sv/: cosmic_ext_applet_tempest.ftl
i18n/uk/: cosmic_ext_applet_tempest.ftl
i18n/zh-Hans/: cosmic_ext_applet_tempest.ftl
packaging/: README.md  nfpm.yaml
packaging/aur/: .SRCINFO  .gitignore  PKGBUILD  aur-publish.sh
packaging/flatpak/: assert-manifest-tag.sh  publish.sh  tempest-repo-signing-key.asc  vintagetechie-tempest.flatpakrepo
res/: com.vintagetechie.CosmicExtAppletTempest.desktop  com.vintagetechie.CosmicExtAppletTempest.metainfo.xml
src/: applet.rs  config.rs  main.rs  meteogram.rs  network.rs  pride.rs  sleep.rs  weather.rs
src/applet/: view.rs
